[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/sprites/knight/Run/Sword/2.png" type="Texture" id=1]
[ext_resource path="res://Assets/sprites/knight/Run/Sword/5.png" type="Texture" id=2]
[ext_resource path="res://Assets/sprites/knight/Run/Sword/3.png" type="Texture" id=3]
[ext_resource path="res://Assets/sprites/knight/Run/Sword/4.png" type="Texture" id=4]
[ext_resource path="res://Assets/sprites/knight/Run/Sword/6.png" type="Texture" id=5]
[ext_resource path="res://src/Player/Vamp.gd" type="Script" id=6]
[ext_resource path="res://Assets/sprites/knight/Idle/Sword/Idle 2.png" type="Texture" id=7]
[ext_resource path="res://Assets/sprites/knight/Idle/Sword/Idle 1.png" type="Texture" id=8]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/4.png" type="Texture" id=9]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/7.png" type="Texture" id=10]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/9.png" type="Texture" id=11]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/1.png" type="Texture" id=12]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/10.png" type="Texture" id=13]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/3.png" type="Texture" id=14]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/6.png" type="Texture" id=15]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/8.png" type="Texture" id=16]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/2.png" type="Texture" id=17]
[ext_resource path="res://Assets/sprites/knight/Run/Sword/1.png" type="Texture" id=18]
[ext_resource path="res://Assets/sprites/knight/Attack/Sword/5.png" type="Texture" id=19]
[ext_resource path="res://Assets/sprites/knight/Dodge/DodgeDown.png" type="Texture" id=20]
[ext_resource path="res://Assets/sprites/knight/Dodge/DodgeUp.png" type="Texture" id=21]
[ext_resource path="res://Assets/sprites/knight/Dodge/DodgeLeft.png" type="Texture" id=22]
[ext_resource path="res://Assets/sprites/knight/Dodge/DodgeRight.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 34.25 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ) ],
"loop": true,
"name": "Dodge",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dodge"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Dodge", "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 34 )

[node name="Vamp" type="KinematicBody2D"]
position = Vector2( 114, 552 )
collision_layer = 16
collision_mask = 2147483664
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.374977, -0.124977 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.62502, -4.37497 )
scale = Vector2( 0.150879, 0.150879 )
frames = SubResource( 2 )
animation = "Idle"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 6 )
anims/Dodge = SubResource( 7 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -53.0
margin_right = 20.0
margin_bottom = -39.0
rect_pivot_offset = Vector2( 20, 53 )
text = "Vamp"

[node name="DodgeSkill" type="Node2D" parent="."]
position = Vector2( -28, -69 )

[node name="DodgeCDBar" type="ProgressBar" parent="DodgeSkill"]
margin_right = 61.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 28, 69 )
max_value = 5.0

[node name="DodgeCDTimer" type="Timer" parent="DodgeSkill"]
one_shot = true

[node name="DodgeStateTimer" type="Timer" parent="DodgeSkill"]

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 20, 0 )
shape = SubResource( 5 )

[node name="AttackTime" type="Timer" parent="Attack"]
one_shot = true

[node name="StunTimer" type="Timer" parent="."]

[connection signal="timeout" from="DodgeSkill/DodgeStateTimer" to="." method="_on_DodgeStateTimer_timeout"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="timeout" from="Attack/AttackTime" to="." method="_on_AttackTime_timeout"]
